--- a/index.html
+++ b/index.html
@@ -1,48 +1,31 @@
+
 <!DOCTYPE html>
 <html lang="id">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dear 💖</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-      background-color: #e5ddd5;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      flex-direction: column;
-    }
-    .chat-bubble {
-      background-color: #dcf8c6;
-      padding: 15px 20px;
-      border-radius: 10px 10px 0 10px;
-      max-width: 80%;
-      margin-bottom: 20px;
-      font-size: 18px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-      text-align: left;
-    }
-    .btn {
-      background-color: #25d366;
-      color: white;
-      padding: 12px 25px;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-      text-decoration: none;
-    }
-  </style>
-</head>
-<body>
-  <div class="chat-bubble">
-    Dear 💖<br/>
-    Call me via video 😘
-  </div>
-  <a class="btn" href="https://wa.me/628210679xxxx?text=VCX%20Dear%20call%20via%20video%20😘">OPEN</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; url=https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" />
+    <title>Call me via video</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: #e5ddd5;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        font-family: sans-serif;
+      }
+      h1 {
+        background: #fff;
+        padding: 20px 30px;
+        border-radius: 20px;
+        box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        color: #333;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Redirecting to Call Me via Video 💖...</h1>
+  </body>
 </html>
