--- a/index.html
+++ b/index.html
@@ -1,31 +1,60 @@
 
 <!DOCTYPE html>
 <html lang="id">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" />
-    <title>Call me via video</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        background-color: #e5ddd5;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        font-family: sans-serif;
-      }
-      h1 {
-        background: #fff;
-        padding: 20px 30px;
-        border-radius: 20px;
-        box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-        color: #333;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Redirecting to Call Me via Video 💖...</h1>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Call Me via Video</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+      background-color: #e5ddd5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .container {
+      background-color: #fff;
+      padding: 30px 40px;
+      border-radius: 20px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      text-align: center;
+    }
+    h1 {
+      margin-bottom: 20px;
+      font-size: 24px;
+      color: #333;
+    }
+    .btn {
+      display: inline-block;
+      padding: 12px 28px;
+      font-size: 18px;
+      background-color: #25d366;
+      color: white;
+      border: none;
+      border-radius: 30px;
+      text-decoration: none;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .btn:hover {
+      background-color: #1eb75c;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Call Me via Video 💖</h1>
+    <button class="btn" onclick="redirect()">OPEN</button>
+  </div>
+
+  <script>
+    function redirect() {
+      window.location.href = "https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995";
+    }
+  </script>
+</body>
 </html>
