--- a/index.html
+++ b/index.html
@@ -4,57 +4,69 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Call Me via Video</title>
+  <title>Ratna Call Video</title>
   <style>
     body {
       margin: 0;
       padding: 0;
+      background-color: #ece5dd;
       font-family: sans-serif;
-      background-color: #e5ddd5;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
     }
-    .container {
+    .chat-container {
+      max-width: 400px;
+      margin: 60px auto;
       background-color: #fff;
-      padding: 30px 40px;
-      border-radius: 20px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-      text-align: center;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      overflow: hidden;
     }
-    h1 {
-      margin-bottom: 20px;
-      font-size: 24px;
-      color: #333;
-    }
-    .btn {
-      display: inline-block;
-      padding: 12px 28px;
+    .header {
+      background-color: #075e54;
+      color: white;
+      padding: 15px;
       font-size: 18px;
+    }
+    .message {
+      padding: 20px;
+    }
+    .bubble {
+      background-color: #dcf8c6;
+      padding: 12px 15px;
+      border-radius: 10px 10px 0 10px;
+      margin-bottom: 20px;
+      display: inline-block;
+      max-width: 80%;
+    }
+    .open-button {
+      display: block;
+      width: 80%;
+      margin: 0 auto 20px auto;
+      padding: 12px;
       background-color: #25d366;
       color: white;
+      text-align: center;
       border: none;
-      border-radius: 30px;
-      text-decoration: none;
+      border-radius: 25px;
+      font-size: 16px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      text-decoration: none;
     }
-    .btn:hover {
-      background-color: #1eb75c;
+    .open-button:hover {
+      background-color: #1da851;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Call Me via Video 💖</h1>
-    <button class="btn" onclick="redirect()">OPEN</button>
+  <div class="chat-container">
+    <div class="header">
+      Ratna 💖
+    </div>
+    <div class="message">
+      <div class="bubble">
+        Hai kak, video call yuk 😘
+      </div>
+      <a class="open-button" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">OPEN</a>
+    </div>
   </div>
-
-  <script>
-    function redirect() {
-      window.location.href = "https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995";
-    }
-  </script>
 </body>
 </html>
