--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<div class="message">
-  <img src="IMG-20250630-WA0003.jpg" alt="Thumbnail Ratna" style="width: 100%; border-radius: 10px; margin-bottom: 20px;" />
-  <div class="bubble">
-    Hai kak, video call yuk 😘
-  </div>
-  <a class="open-button" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">OPEN</a>
-</div>
+<meta property="og:title" content="Ratna Call Video 💖" />
+<meta property="og:description" content="Klik OPEN untuk video call bareng Ratna 😘" />
+<meta property="og:image" content="https://raw.githubusercontent.com/ratnacallvideo/Ratna.call.video/main/IMG-20250630-WA0003.jpg" />
+<meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
+<meta property="og:type" content="website" />
