--- a/index.html
+++ b/index.html
@@ -1,5 +1,86 @@
-<meta property="og:title" content="Ratna Call Video 💖" />
-<meta property="og:description" content="Klik OPEN untuk video call bareng Ratna 😘" />
-<meta property="og:image" content="https://raw.githubusercontent.com/ratnacallvideo/Ratna.call.video/main/IMG-20250630-WA0003.jpg" />
-<meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
-<meta property="og:type" content="website" />
+
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ratna Call Video</title>
+
+  <!-- ✅ OPEN GRAPH META UNTUK FACEBOOK -->
+  <meta property="og:title" content="Ratna Call Video 💖" />
+  <meta property="og:description" content="Klik OPEN untuk video call bareng Ratna 😘" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/ratnacallvideo/Ratna.call.video/main/IMG-20250630-WA0003.jpg" />
+  <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
+  <meta property="og:type" content="website" />
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #ece5dd;
+      font-family: sans-serif;
+    }
+    .chat-container {
+      max-width: 400px;
+      margin: 60px auto;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      overflow: hidden;
+    }
+    .header {
+      background-color: #075e54;
+      color: white;
+      padding: 15px;
+      font-size: 18px;
+    }
+    .message {
+      padding: 20px;
+    }
+    .bubble {
+      background-color: #dcf8c6;
+      padding: 12px 15px;
+      border-radius: 10px 10px 0 10px;
+      margin-bottom: 20px;
+      display: inline-block;
+      max-width: 80%;
+    }
+    .open-button {
+      display: block;
+      width: 80%;
+      margin: 0 auto 20px auto;
+      padding: 12px;
+      background-color: #25d366;
+      color: white;
+      text-align: center;
+      border: none;
+      border-radius: 25px;
+      font-size: 16px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+    .open-button:hover {
+      background-color: #1da851;
+    }
+    img.thumbnail {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+  </style>
+</head>
+<body>
+  <div class="chat-container">
+    <div class="header">
+      Ratna 💖
+    </div>
+    <div class="message">
+      <img src="IMG-20250630-WA0003.jpg" alt="Thumbnail Ratna" class="thumbnail" />
+      <div class="bubble">
+        Hai kak, video call yuk 😘
+      </div>
+      <a class="open-button" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">OPEN</a>
+    </div>
+  </div>
+</body>
+</html>
