--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -6,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ratna Call Video</title>
 
-  <!-- ✅ OPEN GRAPH META UNTUK FACEBOOK -->
+  <!-- Open Graph Facebook -->
   <meta property="og:title" content="Ratna Call Video 💖" />
   <meta property="og:description" content="Klik OPEN untuk video call bareng Ratna 😘" />
   <meta property="og:image" content="https://raw.githubusercontent.com/ratnacallvideo/Ratna.call.video/main/IMG-20250630-WA0003.jpg" />
+  <meta property="og:image:width" content="1023" />
+  <meta property="og:image:height" content="1600" />
   <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
   <meta property="og:type" content="website" />
 
@@ -17,70 +18,44 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #ece5dd;
       font-family: sans-serif;
+      background-color: #e5ddd5;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
-    .chat-container {
-      max-width: 400px;
-      margin: 60px auto;
+    .container {
       background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      overflow: hidden;
+      padding: 20px 30px;
+      border-radius: 20px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      text-align: center;
     }
-    .header {
-      background-color: #075e54;
-      color: white;
-      padding: 15px;
-      font-size: 18px;
+    h1 {
+      margin-bottom: 10px;
     }
-    .message {
-      padding: 20px;
-    }
-    .bubble {
-      background-color: #dcf8c6;
-      padding: 12px 15px;
-      border-radius: 10px 10px 0 10px;
-      margin-bottom: 20px;
+    a.button {
       display: inline-block;
-      max-width: 80%;
-    }
-    .open-button {
-      display: block;
-      width: 80%;
-      margin: 0 auto 20px auto;
-      padding: 12px;
+      margin-top: 20px;
+      padding: 12px 24px;
       background-color: #25d366;
       color: white;
-      text-align: center;
-      border: none;
-      border-radius: 25px;
-      font-size: 16px;
-      cursor: pointer;
+      border-radius: 30px;
       text-decoration: none;
-    }
-    .open-button:hover {
-      background-color: #1da851;
-    }
-    img.thumbnail {
-      width: 100%;
-      border-radius: 10px;
-      margin-bottom: 20px;
+      font-size: 18px;
     }
   </style>
 </head>
 <body>
-  <div class="chat-container">
-    <div class="header">
-      Ratna 💖
-    </div>
-    <div class="message">
-      <img src="IMG-20250630-WA0003.jpg" alt="Thumbnail Ratna" class="thumbnail" />
-      <div class="bubble">
-        Hai kak, video call yuk 😘
-      </div>
-      <a class="open-button" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">OPEN</a>
-    </div>
+  <div class="container">
+    <h1>Dear 💖</h1>
+    <p>Call me via video 😘</p>
+    <a class="button" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">OPEN</a>
   </div>
+
+  <!-- Adsterra Script -->
+  <script type="text/javascript" src="//pl20112544.toprevenuegate.com/e3/b3/9f/e3b39f3787e8d5e4a5f478700028b39c.js"></script>
 </body>
 </html>
