--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<html lang="id">
-<head><link rel="icon" href="https://raw.githubusercontent.com/ratnacallvideo/Ratna.call.video/main/IMG-20250630-WA0003.jpg" />
+<head>
+  <link rel="icon" href="https://i.imgur.com/EY57a3o.jpeg" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ratna Call Video</title>
@@ -8,54 +7,10 @@
   <!-- Open Graph Facebook -->
   <meta property="og:title" content="Ratna Call Video 💖" />
   <meta property="og:description" content="Klik OPEN untuk video call bareng Ratna 😘" />
-  <meta property="og:image" content="https://raw.githubusercontent.com/ratnacallvideo/Ratna.call.video/main/IMG-20250630-WA0003.jpg" />
+  <meta property="og:image" content="https://i.imgur.com/EY57a3o.jpeg" />
+  <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="1023" />
   <meta property="og:image:height" content="1600" />
   <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
   <meta property="og:type" content="website" />
-
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-      background-color: #e5ddd5;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .container {
-      background-color: #fff;
-      padding: 20px 30px;
-      border-radius: 20px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    h1 {
-      margin-bottom: 10px;
-    }
-    a.button {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 24px;
-      background-color: #25d366;
-      color: white;
-      border-radius: 30px;
-      text-decoration: none;
-      font-size: 18px;
-    }
-  </style>
 </head>
-<body>
-  <div class="container">
-    <h1>Dear 💖</h1>
-    <p>Call me via video 😘</p>
-    <a class="button" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">OPEN</a>
-  </div>
-
-  <!-- Adsterra Script -->
-  <script type="text/javascript" src="//pl20112544.toprevenuegate.com/e3/b3/9f/e3b39f3787e8d5e4a5f478700028b39c.js"></script>
-</body>
-</html>
