--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<head>
+<head><meta property="fb:app_id" content="1234567890" />
   <link rel="icon" href="https://i.imgur.com/EY57a3o.jpeg" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
