--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<head><meta property="fb:app_id" content="1234567890" />
-  <link rel="icon" href="https://i.imgur.com/EY57a3o.jpeg" />
+<!DOCTYPE html>
+<html lang="id">
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ratna Call Video</title>
 
-  <!-- Open Graph Facebook -->
+  <!-- Favicon -->
+  <link rel="icon" href="https://i.imgur.com/EY57a3o.jpeg" />
+
+  <!-- Facebook Open Graph -->
+  <meta property="fb:app_id" content="1234567890" />
   <meta property="og:title" content="Ratna Call Video 💖" />
   <meta property="og:description" content="Klik OPEN untuk video call bareng Ratna 😘" />
   <meta property="og:image" content="https://i.imgur.com/EY57a3o.jpeg" />
@@ -14,3 +19,11 @@
   <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
   <meta property="og:type" content="website" />
 </head>
+<body>
+  <h1 style="text-align:center;">Dear 💖</h1>
+  <p style="text-align:center;">Call me via video 😘</p>
+  <div style="text-align:center;">
+    <a href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank" style="background:#25d366;padding:12px 24px;color:white;text-decoration:none;border-radius:30px;">OPEN</a>
+  </div>
+</body>
+</html>
