--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Ratna Call Video</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="https://i.imgur.com/EY57a3o.jpeg" />
+  <link rel="icon" href="https://i.imgur.com/EY57a3o.jpeg" type="image/jpeg" />
 
   <!-- Facebook Open Graph -->
   <meta property="fb:app_id" content="1234567890" />
@@ -18,12 +18,46 @@
   <meta property="og:image:height" content="1600" />
   <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
   <meta property="og:type" content="website" />
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+      background-color: #e5ddd5;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .container {
+      background-color: #fff;
+      padding: 20px 30px;
+      border-radius: 20px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    h1 {
+      margin-bottom: 10px;
+    }
+    a.button {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 24px;
+      background-color: #25d366;
+      color: white;
+      border-radius: 30px;
+      text-decoration: none;
+      font-size: 18px;
+    }
+  </style>
 </head>
 <body>
-  <h1 style="text-align:center;">Dear 💖</h1>
-  <p style="text-align:center;">Call me via video 😘</p>
-  <div style="text-align:center;">
-    <a href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank" style="background:#25d366;padding:12px 24px;color:white;text-decoration:none;border-radius:30px;">OPEN</a>
+  <div class="container">
+    <h1>Dear 💖</h1>
+    <p>Call me via video 😘</p>
+    <a class="button" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">OPEN</a>
   </div>
 </body>
 </html>
