--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>Ratna Call Video</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="https://i.imgur.com/ERKBpkr.jpeg" type="image/jpeg" />
+  <link rel="icon" href="https://i.imgur.com/LEzVU30.jpeg" type="image/jpeg" />
 
   <!-- Facebook Open Graph -->
   <meta property="fb:app_id" content="1234567890" />
   <meta property="og:title" content="Ratna Call Video 💖" />
   <meta property="og:description" content="Klik OPEN untuk video call bareng Ratna 😘" />
-  <meta property="og:image" content="https://i.imgur.com/ERKBpkr.jpeg" />
+  <meta property="og:image" content="https://i.imgur.com/LEzVU30.jpeg" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="1023" />
   <meta property="og:image:height" content="1600" />
