--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Ratna Call Video</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="https://i.imgur.com/pJ7N4gD.jpeg" type="image/jpeg" />
+  <link rel="icon" href="https://i.imgur.com/niCVsbs.jpeg" type="image/jpeg" />
 
   <!-- Open Graph (untuk thumbnail saat share di FB, WA, dll) -->
   <meta property="og:title" content="Ratna Call Video" />
   <meta property="og:description" content="Klik untuk video call dengan Ratna 😘" />
-  <meta property="og:image" content="https://i.imgur.com/pJ7N4gD.jpeg" />
+  <meta property="og:image" content="https://i.imgur.com/niCVsbs.jpeg" />
   <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
   <meta property="og:type" content="website" />
 
