--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta property="og:title" content="Ratna Call Video 💖" />
   <meta property="og:description" content="Klik OPEN untuk video call bareng Ratna 😘" />
   <meta property="og:image" content="https://i.imgur.com/gqQOdRI.jpeg" />
+  <meta property="og:image:secure_url" content="https://i.imgur.com/gqQOdRI.jpeg" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="1023" />
   <meta property="og:image:height" content="1600" />
