--- a/index.html
+++ b/index.html
@@ -6,59 +6,51 @@
   <title>Ratna Call Video</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="https://i.imgur.com/gqQOdRI.jpeg" type="image/jpeg" />
+  <link rel="icon" href="https://i.imgur.com/gqQOdRl.jpeg" type="image/jpeg" />
 
-  <!-- Facebook Open Graph -->
-  <meta property="fb:app_id" content="1234567890" />
-  <meta property="og:title" content="Ratna Call Video 💖" />
-  <meta property="og:description" content="Klik OPEN untuk video call bareng Ratna 😘" />
-  <meta property="og:image" content="https://i.imgur.com/gqQOdRI.jpeg" />
-  <meta property="og:image:secure_url" content="https://i.imgur.com/gqQOdRI.jpeg" />
-  <meta property="og:image:type" content="image/jpeg" />
-  <meta property="og:image:width" content="1023" />
-  <meta property="og:image:height" content="1600" />
+  <!-- Open Graph (untuk thumbnail saat share di FB, WA, dll) -->
+  <meta property="og:title" content="Ratna Call Video" />
+  <meta property="og:description" content="Klik untuk video call dengan Ratna 😘" />
+  <meta property="og:image" content="https://i.imgur.com/gqQOdRl.jpeg" />
   <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
   <meta property="og:type" content="website" />
 
   <style>
     body {
       margin: 0;
-      padding: 0;
       font-family: sans-serif;
       background-color: #e5ddd5;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
     }
     .container {
-      background-color: #fff;
-      padding: 20px 30px;
+      background: #fff;
+      padding: 20px;
       border-radius: 20px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
       text-align: center;
     }
-    h1 {
-      margin-bottom: 10px;
+    .text {
+      margin-bottom: 20px;
+      font-size: 18px;
     }
-    a.button {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 24px;
+    .btn {
       background-color: #25d366;
       color: white;
-      border-radius: 30px;
+      padding: 15px 30px;
       text-decoration: none;
-      font-size: 18px;
+      border-radius: 50px;
+      font-weight: bold;
+      font-size: 16px;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Dear 💖</h1>
-    <p>Call me via video 😘</p>
-    <a class="button" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">OPEN</a>
+    <div class="text">Dear call me via video 😘</div>
+    <a class="btn" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">OPEN</a>
   </div>
 </body>
 </html>
