--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ratna Call Video</title>
 
-  <!-- Favicon -->
-  <link rel="icon" href="https://i.imgur.com/ph9m3Dr.jpeg" type="image/jpeg" />
-
-  <!-- Open Graph (untuk thumbnail saat share di FB, WA, dll) -->
-  <meta property="og:title" content="Ratna Call Video" />
-  <meta property="og:description" content="Klik untuk video call dengan Ratna 😘" />
+  <!-- Thumbnail saat dishare -->
+  <meta property="og:title" content="Ratna Call Video 💗" />
+  <meta property="og:description" content="Dear call me video 💗 Ratna" />
   <meta property="og:image" content="https://i.imgur.com/ph9m3Dr.jpeg" />
-  <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
+
+  <link rel="icon" href="https://i.imgur.com/ph9m3Dr.jpeg" type="image/jpeg" />
 
   <style>
     body {
@@ -21,35 +20,55 @@
       font-family: sans-serif;
       background-color: #e5ddd5;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      height: 100vh;
+      justify-content: center;
+      min-height: 100vh;
     }
+
     .container {
       background: #fff;
-      padding: 20px;
       border-radius: 20px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       text-align: center;
+      padding: 20px;
+      max-width: 360px;
+      width: 90%;
     }
-    .text {
+
+    .thumbnail {
+      width: 100%;
+      border-radius: 15px;
       margin-bottom: 20px;
-      font-size: 18px;
     }
+
+    .title {
+      font-size: 20px;
+      margin-bottom: 10px;
+      color: #333;
+    }
+
     .btn {
-      background-color: #25d366;
-      color: white;
-      padding: 15px 30px;
-      text-decoration: none;
-      border-radius: 50px;
-      font-weight: bold;
+      display: inline-block;
+      padding: 12px 25px;
       font-size: 16px;
+      background-color: #25D366;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      text-decoration: none;
+      transition: background-color 0.3s;
+    }
+
+    .btn:hover {
+      background-color: #1da851;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="text">Dear call me via video 😘</div>
+    <img src="https://i.imgur.com/ph9m3Dr.jpeg" alt="Ratna Hijab" class="thumbnail" />
+    <div class="title">Dear call me video 💗 Ratna</div>
     <a class="btn" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">OPEN</a>
   </div>
 </body>
