--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ratna Call Video</title>
 
-  <!-- Thumbnail saat dishare -->
+  <!-- Thumbnail untuk sosial media -->
   <meta property="og:title" content="Ratna Call Video 💗" />
   <meta property="og:description" content="Dear call me video 💗 Ratna" />
   <meta property="og:image" content="https://i.imgur.com/ph9m3Dr.jpeg" />
@@ -69,7 +69,7 @@
   <div class="container">
     <img src="https://i.imgur.com/ph9m3Dr.jpeg" alt="Ratna Hijab" class="thumbnail" />
     <div class="title">Dear call me video 💗 Ratna</div>
-    <a class="btn" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">OPEN</a>
+    <a class="btn" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">CALL</a>
   </div>
 </body>
 </html>
