--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ratna Call Video</title>
 
-  <!-- Thumbnail untuk sosial media -->
-  <meta property="og:title" content="Ratna Call Video 💗" />
-  <meta property="og:description" content="Dear call me video 💗 Ratna" />
-  <meta property="og:image" content="https://i.imgur.com/ph9m3Dr.jpeg" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
-
+  <!-- Favicon -->
   <link rel="icon" href="https://i.imgur.com/ph9m3Dr.jpeg" type="image/jpeg" />
+
+  <!-- Open Graph (untuk thumbnail saat share di FB, WA, dll) -->
+  <meta property="og:title" content="Ratna Call Video" />
+  <meta property="og:description" content="Klik untuk video call dengan Ratna 😘" />
+  <meta property="og:image" content="https://i.imgur.com/ph9m3Dr.jpeg" />
+  <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
+  <meta property="og:type" content="website" />
 
   <style>
     body {
@@ -20,55 +21,52 @@
       font-family: sans-serif;
       background-color: #e5ddd5;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      align-items: center;
+      height: 100vh;
     }
-
     .container {
       background: #fff;
-      border-radius: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      text-align: center;
       padding: 20px;
-      max-width: 360px;
-      width: 90%;
+      border-radius: 20px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      text-align: center;
     }
-
-    .thumbnail {
-      width: 100%;
-      border-radius: 15px;
+    .text {
       margin-bottom: 20px;
+      font-size: 18px;
     }
-
-    .title {
-      font-size: 20px;
-      margin-bottom: 10px;
-      color: #333;
-    }
-
     .btn {
-      display: inline-block;
-      padding: 12px 25px;
-      font-size: 16px;
-      background-color: #25D366;
+      background-color: #25d366;
       color: white;
-      border: none;
-      border-radius: 10px;
+      padding: 15px 30px;
       text-decoration: none;
-      transition: background-color 0.3s;
+      border-radius: 50px;
+      font-weight: bold;
+      font-size: 16px;
+      display: inline-block;
+      animation: pulse 1.5s infinite;
     }
 
-    .btn:hover {
-      background-color: #1da851;
+    @keyframes pulse {
+      0% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7);
+      }
+      70% {
+        transform: scale(1.05);
+        box-shadow: 0 0 0 15px rgba(37, 211, 102, 0);
+      }
+      100% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0);
+      }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <img src="https://i.imgur.com/ph9m3Dr.jpeg" alt="Ratna Hijab" class="thumbnail" />
-    <div class="title">Dear call me video 💗 Ratna</div>
+    <div class="text">Dear call me via video 😘</div>
     <a class="btn" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">CALL</a>
   </div>
 </body>
