--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
       border-radius: 20px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       text-align: center;
+      max-width: 350px;
+    }
+    .container img {
+      width: 100%;
+      border-radius: 15px;
+      margin-bottom: 15px;
     }
     .text {
       margin-bottom: 20px;
@@ -66,6 +72,7 @@
 </head>
 <body>
   <div class="container">
+    <img src="https://i.imgur.com/ph9m3Dr.jpeg" alt="Ratna" />
     <div class="text">Dear call me via video 😘</div>
     <a class="btn" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">CALL</a>
   </div>
