--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Favicon -->
   <link rel="icon" href="https://i.imgur.com/ph9m3Dr.jpeg" type="image/jpeg" />
 
-  <!-- Open Graph (untuk thumbnail saat share di FB, WA, dll) -->
+  <!-- Open Graph -->
   <meta property="og:title" content="Ratna Call Video" />
   <meta property="og:description" content="Klik untuk video call dengan Ratna 😘" />
   <meta property="og:image" content="https://i.imgur.com/ph9m3Dr.jpeg" />
@@ -53,7 +53,6 @@
       display: inline-block;
       animation: pulse 1.5s infinite;
     }
-
     @keyframes pulse {
       0% {
         transform: scale(1);
