--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Favicon -->
   <link rel="icon" href="https://i.imgur.com/ph9m3Dr.jpeg" type="image/jpeg" />
 
-  <!-- Open Graph -->
+  <!-- Open Graph (thumbnail saat dibagikan) -->
   <meta property="og:title" content="Ratna Call Video" />
   <meta property="og:description" content="Klik untuk video call dengan Ratna 😘" />
   <meta property="og:image" content="https://i.imgur.com/ph9m3Dr.jpeg" />
@@ -71,7 +71,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="https://i.imgur.com/ph9m3Dr.jpeg" alt="Ratna" />
+    <img src="https://i.imgur.com/nTu7xJ7.jpeg" alt="Ratna" />
     <div class="text">Dear call me via video 😘</div>
     <a class="btn" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">CALL</a>
   </div>
