--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
   <div class="container">
     <img src="https://i.imgur.com/nTu7xJ7.jpeg" alt="Ratna" />
-    <div class="text">Dear call me via video 😘</div>
+    <div class="text">Dear call me via video 💗</div>
     <a class="btn" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">CALL</a>
   </div>
 </body>
