--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
   <div class="container">
     <img src="https://i.imgur.com/nTu7xJ7.jpeg" alt="Ratna" />
     <div class="text">Dear call me via video 💗</div>
-    <a class="btn" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995" target="_blank">CALL</a>
+    <a class="btn" href="http://tipssuksesusiamuda19.blogspot.com" target="_blank">CALL</a>
   </div>
+
+  <!-- Popunder Script Adsterra -->
+  <script type='text/javascript' src='https://www.profitableratecpm.com/44/20/59/4420592e6a2285f083367a6fc1fca614.js'></script>
 </body>
 </html>
