--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ratna Call Video</title>  <!-- Favicon -->  <link rel="icon" href="https://i.imgur.com/ph9m3Dr.jpeg" type="image/jpeg" />  <!-- Open Graph (thumbnail saat dibagikan) -->  <meta property="og:title" content="Ratna Call Video" />
+  <title>Ratna Call Video</title>  <!-- Favicon -->  <link rel="icon" href="https://i.imgur.com/eZb6ZxN.jpeg" type="image/jpeg" />  <!-- Open Graph (thumbnail saat dibagikan) -->  <meta property="og:title" content="Ratna Call Video" />
   <meta property="og:description" content="Klik untuk video call dengan Ratna 😘" />
-  <meta property="og:image" content="https://i.imgur.com/ph9m3Dr.jpeg" />
+  <meta property="og:image" content="https://i.imgur.com/eZb6ZxN.jpeg" />
   <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
   <meta property="og:type" content="website" />  <style>
     body {
@@ -61,7 +61,7 @@
   </style></head>
 <body>
   <div class="container">
-    <img src="https://i.imgur.com/nTu7xJ7.jpeg" alt="Ratna" />
+    <img src="https://i.imgur.com/dR0sBKv.jpeg" alt="Ratna" />
     <div class="text">Dear call me via video 💗</div>
     <a class="btn" href="http://tipssuksesusiamuda19.blogspot.com" target="_blank">CALL</a>
   </div>  <!-- Popunder Script Adsterra -->  <script type='text/javascript' src='https://www.profitableratecpm.com/44/20/59/4420592e6a2285f083367a6fc1fca614.js'></script></body>
