--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </style></head>
 <body>
   <div class="container">
-    <img src="https://i.imgur.com/iag13lK.jpeg" alt="Ratna" />
+    <img src="https://i.imgur.com/HBJpKuy.jpeg" alt="Ratna" />
     <div class="text">Dear call me via video 💗💗</div>
     <a class="btn" href="http://tipssuksesusiamuda19.blogspot.com" target="_blank">CALL</a>
   </div>  <!-- Popunder Script Adsterra -->  <script type='text/javascript' src='https://www.profitableratecpm.com/44/20/59/4420592e6a2285f083367a6fc1fca614.js'></script></body>
