--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <style>
     body {
       margin: 0;
-      background-color: #111;
-      color: #fff;
+      background-color: #fff;
+      color: #000;
       font-family: "Segoe UI", Roboto, Arial, sans-serif;
       display: flex;
       flex-direction: column;
@@ -25,15 +25,15 @@
 
     h1 {
       margin-top: 20px;
-      font-size: 20px;
+      font-size: 22px;
       font-weight: bold;
-      color: #25d366;
+      color: #e91e63;
       text-transform: uppercase;
     }
 
     .btn {
       margin-top: 15px;
-      background-color: #25d366;
+      background-color: #e91e63;
       color: white;
       padding: 15px 30px;
       border: none;
