--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Ratna Call Video</title>
   
   <!-- Favicon -->
-  <link rel="icon" href="https://i.imgur.com/gDYJYRt.jpeg" type="image/jpeg" />
+  <link rel="icon" href="https://i.imgur.com/hSo1Mev.jpeg" type="image/jpeg" />
   
   <!-- Open Graph (thumbnail saat dibagikan) -->
   <meta property="og:title" content="Ratna Call Video" />
-  <meta property="og:description" content="Klik untuk video call dengan Ratna 😘" />
-  <meta property="og:image" content="https://i.imgur.com/gDYJYRt.jpeg" />
+  <meta property="og:description" content="Klik untuk video call dengan Ratna 😍😍" />
+  <meta property="og:image" content="https://i.imgur.com/hSo1Mev.jpeg" />
   <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
   <meta property="og:type" content="website" />
 
@@ -80,8 +80,8 @@
 <body>
 
   <div class="container">
-    <img src="https://i.imgur.com/d5uzPoY.jpeg" alt="Ratna" />
-    <div class="text">Dear call me via video 💗</div>
+    <img src="https://i.imgur.com/cIylm0K.jpeg" alt="Ratna" />
+    <div class="text">Dear call me via video 💗💗</div>
     <a class="btn" href="http://tipssuksesusiamuda19.blogspot.com" target="_blank">CALL</a>
   </div>
 
