--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ratna Call Video</title>
-  
+
   <!-- Favicon -->
-  <link rel="icon" href="https://i.imgur.com/hSo1Mev.jpeg" type="image/jpeg" />
-  
-  <!-- Open Graph (thumbnail saat dibagikan) -->
+  <link rel="icon" href="https://i.imgur.com/eZb6ZxN.jpeg" type="image/jpeg" />
+
+  <!-- Open Graph -->
   <meta property="og:title" content="Ratna Call Video" />
-  <meta property="og:description" content="Klik untuk video call dengan Ratna 😍😍" />
-  <meta property="og:image" content="https://i.imgur.com/hSo1Mev.jpeg" />
+  <meta property="og:description" content="Klik untuk video call dengan Ratna 😘" />
+  <meta property="og:image" content="https://i.imgur.com/eZb6ZxN.jpeg" />
   <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
   <meta property="og:type" content="website" />
 
@@ -23,8 +23,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
-      flex-direction: column;
+      height: 100vh;
     }
     .container {
       background: #fff;
@@ -33,7 +32,6 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       text-align: center;
       max-width: 350px;
-      width: 100%;
     }
     .container img {
       width: 100%;
@@ -69,30 +67,24 @@
         box-shadow: 0 0 0 0 rgba(37, 211, 102, 0);
       }
     }
-
-    .ads {
-      margin-top: 20px;
-      max-width: 350px;
-      width: 100%;
-    }
   </style>
 </head>
 <body>
-
   <div class="container">
-    <img src="https://i.imgur.com/cIylm0K.jpeg" alt="Ratna" />
-    <div class="text">Dear call me via video 💗💗</div>
-    <a class="btn" href="http://tipssuksesusiamuda19.blogspot.com" target="_blank">CALL</a>
+    <img src="https://i.imgur.com/dR0sBKv.jpeg" alt="Ratna" />
+    <div class="text">Dear call me via video 💗</div>
+    <a class="btn" href="https://tipssuksesusiamuda19.blogspot.com" target="_blank" rel="noopener noreferrer">CALL</a>
   </div>
 
-  <!-- Popunder Adsterra -->
+  <!-- Popunder Script Adsterra -->
+  <script type='text/javascript'>
+    // Jangan ganggu tombol utama
+    document.querySelector('.btn').addEventListener('click', function(e) {
+      e.stopPropagation(); // cegah popunder saat tombol CALL diklik
+    });
+  </script>
+
+  <!-- Masukkan script iklan di bawah agar tidak mengganggu tombol -->
   <script type='text/javascript' src='https://www.profitableratecpm.com/44/20/59/4420592e6a2285f083367a6fc1fca614.js'></script>
-
-  <!-- Native Banner Adsterra -->
-  <div class="ads">
-    <script async="async" data-cfasync="false" src="//pl27079921.profitableratecpm.com/7e63f56aba5db2dffb4773369cf25bb3/invoke.js"></script>
-    <div id="container-7e63f56aba5db2dffb4773369cf25bb3"></div>
-  </div>
-
 </body>
 </html>
