--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Ratna Call Video</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="https://i.imgur.com/eZb6ZxN.jpeg" type="image/jpeg" />
+  <link rel="icon" href="https://i.imgur.com/hSo1Mev.jpeg" type="image/jpeg" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Ratna Call Video" />
   <meta property="og:description" content="Klik untuk video call dengan Ratna 😘" />
-  <meta property="og:image" content="https://i.imgur.com/eZb6ZxN.jpeg" />
+  <meta property="og:image" content="https://i.imgur.com/hSo1Mev.jpeg" />
   <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
   <meta property="og:type" content="website" />
 
@@ -71,7 +71,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="https://i.imgur.com/dR0sBKv.jpeg" alt="Ratna" />
+    <img src="https://i.imgur.com/cIylm0K.jpeg" alt="Ratna" />
     <div class="text">Dear call me via video 💗</div>
     <a class="btn" href="https://tipssuksesusiamuda19.blogspot.com" target="_blank" rel="noopener noreferrer">CALL</a>
   </div>
