--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
       margin-top: 30px;
       width: 100%;
       max-width: 480px;
-      display: none;
     }
   </style>
 </head>
@@ -70,10 +69,10 @@
   <h1>call me via video 💗💗</h1>
 
   <!-- Tombol CALL -->
-  <a href="http://tipssuksesusiamuda19.blogspot.com" class="btn" onclick="showAds()">CALL</a>
+  <a href="http://tipssuksesusiamuda19.blogspot.com" class="btn">CALL</a>
 
-  <!-- Area Iklan -->
-  <div class="ads" id="adsArea">
+  <!-- Area Iklan (langsung muncul) -->
+  <div class="ads">
     <!-- Popunder -->
     <script type='text/javascript' src='//profitableratecpm.com/44/20/59/4420592e6a2285f083367a6fc1fca614.js'></script>
 
@@ -83,12 +82,6 @@
       <div id="container-7e63f56aba5db2dffb4773369cf25bb3"></div>
     </div>
   </div>
-
-  <script>
-    function showAds() {
-      document.getElementById("adsArea").style.display = "block";
-    }
-  </script>
 
 </body>
 </html>
