--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ratna Call Video</title>
+  <title>Amelia Call Video</title>
 
   <!-- Thumbnail saat dibagikan -->
-  <meta property="og:title" content="Ratna Call Video" />
-  <meta property="og:image" content="https://i.imgur.com/hSo1Mev.jpeg" />
-  <meta property="og:description" content="Dear, call me via video 😘" />
+  <meta property="og:title" content="Amelia Call 💗💗" />
+  <meta property="og:image" content="https://i.imgur.com/ph9m3Dr.jpeg" />
+  <meta property="og:description" content="Dear, call me via video 😍😍" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
 
   <!-- Favicon -->
-  <link rel="icon" href="https://i.imgur.com/hSo1Mev.jpeg" type="image/jpeg" />
+  <link rel="icon" href="https://i.imgur.com/ph9m3Dr.jpeg" type="image/jpeg" />
 
   <style>
     body {
@@ -25,7 +25,7 @@
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      background-image: url('https://i.imgur.com/cIylm0K.jpeg');
+      background-image: url('https://i.imgur.com/J99fFyZ.jpeg');
       background-size: cover;
       background-position: center;
     }
