--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Amelia Call Video</title>
 
   <!-- Thumbnail saat dibagikan -->
-  <meta property="og:title" content="Amelia Call 💗💗" />
+  <meta property="og:title" content="Amelia Call Video Whatsapp 💗💗" />
   <meta property="og:image" content="https://i.imgur.com/ph9m3Dr.jpeg" />
   <meta property="og:description" content="Dear, call me via video 😍😍" />
   <meta property="og:type" content="website" />
