--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Amelia Call Video</title>
+  <title>Yuniii Call Video</title>
 
   <!-- Thumbnail saat dibagikan -->
-  <meta property="og:title" content="Amelia Call Video Whatsapp 💗💗" />
-  <meta property="og:image" content="https://i.imgur.com/ph9m3Dr.jpeg" />
+  <meta property="og:title" content="Yuniii Call Video Whatsapp 💗💗" />
+  <meta property="og:image" content="https://i.imgur.com/gDYJYRt.jpeg" />
   <meta property="og:description" content="Dear, call me via video 😍😍" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
 
   <!-- Favicon -->
-  <link rel="icon" href="https://i.imgur.com/ph9m3Dr.jpeg" type="image/jpeg" />
+  <link rel="icon" href="https://i.imgur.com/gDYJYRt.jpeg" type="image/jpeg" />
 
   <style>
     body {
@@ -25,7 +25,7 @@
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      background-image: url('https://i.imgur.com/lWoWVug.jpeg');
+      background-image: url('https://i.imgur.com/d5uzPoY.jpeg');
       background-size: cover;
       background-position: center;
     }
@@ -63,7 +63,7 @@
   </style>
 </head>
 <body>
-  <div class="teks">Dear, Call Me via Video 😘</div>
+  <div class="teks">Dear, Call Me via Video 📞📞</div>
   <a class="tombol" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995">CALL</a>
 </body>
 </html>
