--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
   <!-- Thumbnail saat dibagikan -->
   <meta property="og:title" content="Yuniii Call Video Whatsapp 💗💗" />
-  <meta property="og:image" content="https://i.imgur.com/gDYJYRt.jpeg" />
+  <meta property="og:image" content="https://i.imgur.com/FKfRtGk.jpeg" />
   <meta property="og:description" content="Dear, call me via video 😍😍" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
 
   <!-- Favicon -->
-  <link rel="icon" href="https://i.imgur.com/gDYJYRt.jpeg" type="image/jpeg" />
+  <link rel="icon" href="https://i.imgur.com/FKfRtGk.jpeg" type="image/jpeg" />
 
   <style>
     body {
@@ -25,7 +25,7 @@
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      background-image: url('https://i.imgur.com/d5uzPoY.jpeg');
+      background-image: url('https://i.imgur.com/UAI27D0.jpeg');
       background-size: cover;
       background-position: center;
     }
@@ -64,6 +64,6 @@
 </head>
 <body>
   <div class="teks">Dear, Call Me via Video 📞📞</div>
-  <a class="tombol" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995">CALL</a>
+  <a class="tombol" href="https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995">CONTINUE TO CALL VIDEO</a>
 </body>
 </html>
